# feldspar

./: Cargo.toml  README.md
assets/items/: stone.json
assets/shaders/: custom.wgsl  sky_shader.wgsl  voxel_base.wgsl  voxel_material.wgsl
src/: feldspar.rs  first_person_view_model.rs  main.rs
src/definitions/blocks/: air.json  dirt.json  stone.json
src/plugin/: block_interaction.rs  block_registry.rs  camera.rs  chunk.rs  controls.rs  dimension.rs  meshing.rs  mod.rs  shape.rs  state.rs  ui.rs  voxel.rs  weather.rs
src/plugin/audio/: block.rs  loader.rs  mod.rs
src/plugin/block/: material.rs
src/plugin/controller/: freecamera.rs  main.rs  mod.rs  player.rs
src/plugin/crafting/: main.rs  mod.rs
src/plugin/geometry/: meshing.rs  mod.rs  quads.rs
src/plugin/graphics/: block_material.rs  block_textures.rs  mod.rs
src/plugin/inventory/: item_display.rs  item_registry.rs  main.rs  mod.rs  player.rs  player_inventory.rs
src/plugin/old_code/: meshing_old.rs
src/plugin/registry/: material.rs
src/plugin/ui/: compass.rs  crafting.rs  cursor.rs  hotbar.rs  inventory.rs  item.rs  main.rs  mod.rs
src/plugin/worldgen/: flat.rs  hills.rs  main.rs  mod.rs
src/plugins/: block.rs  camera_follow.rs  chunk.rs  game_state.rs  inventory.rs  item.rs  mod.rs  player_controller.rs  ui_crafting.rs  ui_pickup.rs
