[package]
name = "feldspar"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main"}
bevy_common_assets = { version = "0.13", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.18.0" }

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3