[package]
name = "feldspar"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", features = ["debug"] }
bevy_common_assets = { version = "0.16", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.18.0" }
rand = "0.10.1"
image = "0.24"
noise = "0.9"
bevy-inspector-egui = "0.36.0"
avian3d = "0.6.1"
bevy_egui = "0.39.1"
bevy_enhanced_input = "0.24.4"
bevy_kira_audio = "0.25.0"
bevy_asset_loader = "0.26.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
